Updates search forms and nested associations

--- a/app/themes/tekyla/stylesheets/active-list.css.scss
+++ b/app/themes/tekyla/stylesheets/active-list.css.scss
@@ -269,12 +269,12 @@ $list-hover-backgrounds: ("" rgba(255, 255, 255, 0)) (":hover" $hover-mask);
         &.firefox     i { @include use-icon(chevron-down); }
         &.help        i { @include use-icon(question-sign); }
         &.import      i { @include use-icon(upload-alt); }
-        &.letter      i { @include use-icon(mark); }
+        &.letter      i { @include use-icon(pencil); }
         &.load        i { @include use-icon(refresh); }
         &.logout      i { @include use-icon(off); }
         &.mail        i { @include use-icon(envelope); }
         &.merge       i { @include use-icon(resize-small); }
-        &.point       i { @include use-icon(point); }
+        &.point       i { @include use-icon(ok); }
         &.print       i { @include use-icon(print); }
         &.reflect     i { @include use-icon(cog); }
         &.refuse      i { @include use-icon(remove); }
@@ -283,7 +283,7 @@ $list-hover-backgrounds: ("" rgba(255, 255, 255, 0)) (":hover" $hover-mask);
         &.sort        i { @include use-icon(sort); }
         &.table       i { @include use-icon(table); }
         &.unchecked   i { @include use-icon(check-empty); }
-        &.unmark      i { @include use-icon(unmark); }
+        &.unmark      i { @include use-icon(remove-sign); }
         &.up          i { @include use-icon(chevron-up); }
       }
 
