--- a/app/views/backend/journals/_index.html.haml
+++ b/app/views/backend/journals/_index.html.haml
@@ -1,16 +1,24 @@
-%dl.sub-nav
+%dl#journals
   %dt=Backend::JournalsController.human_name
   -if JournalEntryItem.find_by_state("draft")
     -name = tc("draft").html_safe
     -if action_name == "draft"
-      %dd.active.special=name
+      %dd.active.special
+        %i
+        =name
     -else
-      %dd=link_to(name, params.merge(:controller=>:journals, :action=>:draft), :class=>"tab special")
-  -Journal.find_each do |journal|
+      %dd
+        =link_to(params.merge(:controller=>:journals, :action=>:draft), :class=>"tab special") do
+          %i
+          =name
+  -for journal in Journal.all
     -name = journal.name.html_safe
     -classes = ""
     -classes = "active" if (@journal and controller_name == "journals" and action_name == "show" and journal.id == @journal.id) or (@journal_entry and @journal_entry.journal_id == journal.id)
-    %dd{:class => classes}=link_to(name, params.merge(:controller=>:journals, :action=>:show, :id=>journal.id), :title=>journal.name)
+    %dd{:class => classes}
+      =link_to(params.merge(:controller=>:journals, :action=>:show, :id=>journal.id), :title=>journal.name) do
+        %i
+        =name
 
 -#.tabbox.journals
   .tabs
