--- a/app/themes/tekyla/stylesheets/screen.css.scss
+++ b/app/themes/tekyla/stylesheets/screen.css.scss
@@ -266,7 +266,7 @@ $cell-background-current: mix($desktop-background, $base-color, 62%);
 
 @mixin item-label {
   &, & * {
-    color: #999;
+    color:$neutral-color;
   }
 }
 
@@ -298,9 +298,18 @@ $cell-background-current: mix($desktop-background, $base-color, 62%);
     }
     a {
       @include border-radius(1000px);
+      $border-width: 1px;
+      border: $border-width solid transparent;
       background: $neutral-background;
-      padding: round($default-gap * 0.2) $default-gap;
+      padding: round($default-gap * 0.2 - $border-width) $default-gap;
       &, & * { color: $neutral-color; }
+      &:focus, &:active {
+        outline: none;
+        border-color: $active-color;
+      }
+      &:hover {
+        @include box-shadow(0 0 $default-gap white);
+      }
     }
     &.active {
       border: none;
