--- a/app/views/backend/accounts/index.html.haml
+++ b/app/views/backend/accounts/index.html.haml
@@ -1,10 +1,8 @@
-=render :partial=>"search"
+=render :partial => "search"
 
 =toolbar do |t|
   -t.link :new
   -t.link :load
 
-%table.accounts.invex
-  %tr
-    %td.tabs{:valign=>:top}=major_accounts_tabs_tag
-    %td.list{:valign=>:top}=list
+=major_accounts_tabs_tag
+=list
