--- a/app/views/backend/operations/_line_fields.html.haml
+++ b/app/views/backend/operations/_line_fields.html.haml
@@ -6,7 +6,7 @@
   #product-field.control-group.selector.required
     %label.control-label.required{:for => 'operation_item-product-input'}
       %abbr{:title => 'required'} *
-      =OperationLine.human_attribute_name('product')
+      =OperationItem.human_attribute_name('product')
     .controls
       =selector(:operation_item, :product, {:controller=>"product_natures", :action=>:unroll}, {:object => operation_item}, :id => 'operation_item-product-input', :class => 'selector required') + link_to(('<span class="icon"></span><span class="text">' + h('labels.new'.t) + '</span>').html_safe, {:controller => :product_natures, :action => :new}, 'data-new-item' => 'operation_item-product-input', :class => 'btn btn-new')
       -for error in operation_item.errors['product']
@@ -14,7 +14,7 @@
   =f.input(:quantity, :wrapper_html => {:id => 'quantity-field'})
   #tracking-field.control-group.selector.optional
     %label.control-label.optional{:for => 'operation_item-tracking-input'}
-      =OperationLine.human_attribute_name('tracking')
+      =OperationItem.human_attribute_name('tracking')
     .controls
       =selector(:operation_item, :tracking, {:controller=>"trackings", :action=>:unroll}, {:object => operation_item}, :id => 'operation_item-tracking-input', :class => 'selector optional') + link_to(('<span class="icon"></span><span class="text">' + h('labels.new'.t) + '</span>').html_safe, {:controller => :trackings, :action => :new}, 'data-new-item' => 'operation_item-tracking-input', :class => 'btn btn-new')
       -for error in operation_item.errors['tracking']
@@ -22,7 +22,7 @@
   #warehouse-field.control-group.selector.required
     %label.control-label.required{:for => 'operation_item-warehouse-input'}
       %abbr{:title => 'required'} *
-      =OperationLine.human_attribute_name('warehouse')
+      =OperationItem.human_attribute_name('warehouse')
     .controls
       =selector(:operation_item, :warehouse, {:controller=>"warehouses", :action=>:unroll}, {:object => operation_item}, :id => 'operation_item-warehouse-input', :class => 'selector required') + link_to(('<span class="icon"></span><span class="text">' + h('labels.new'.t) + '</span>').html_safe, {:controller => :warehouses, :action => :new}, 'data-new-item' => 'operation_item-warehouse-input', :class => 'btn btn-new')
       -for error in operation_item.errors['warehouse']
