--- a/app/views/layouts/_side.html.haml
+++ b/app/views/layouts/_side.html.haml
@@ -5,7 +5,7 @@
 -menu = current_page.useful_menu if current_page
 
 
--side_menu do |m|
+-#side_menu do |m|
   -if request.url == root_url or request.url == backend_root_url
     -#m.link(:destroy, destroy_user_session_url, :method => :delete)
   -else
