--- a/app/themes/tekyla/stylesheets/active-list.css.scss
+++ b/app/themes/tekyla/stylesheets/active-list.css.scss
@@ -62,6 +62,7 @@ $list-hover-backgrounds: ("" rgba(255, 255, 255, 0)) (":hover" $hover-mask);
             }
             ul {
               @include menu;
+	      z-index: 1000;
               li {
                 @include menu-item;
                 ul {
