--- a/app/views/backend/sale_items/_detail_form.html.haml
+++ b/app/views/backend/sale_items/_detail_form.html.haml
@@ -1,11 +1,11 @@
 -if product = @sale_item.product
   =formalize do |f|
     -f.field :sale_item, :quantity
-    -f.field SaleLine.human_attribute_name("unit_id"), @sale_item.product.unit.label
+    -f.field SaleItem.human_attribute_name("unit_id"), @sale_item.product.unit.label
     -f.field :sale_item, :annotation, :field=>:textarea
   -if product.stockable?
     =formalize do |f|
-      -f.field SaleLine.human_attribute_name("stock_id"), select(:sale_item, :stock_id, product_stocks_options(product))
+      -f.field SaleItem.human_attribute_name("stock_id"), select(:sale_item, :stock_id, product_stocks_options(product))
   -if product.subscribing?
     -@subscription ||= @sale_item.new_subscription(params[:subscription])
     =render :partial=>"subscriptions/coordinates_form"
