--- a/app/views/backend/sales/statistics.html.haml
+++ b/app/views/backend/sales/statistics.html.haml
@@ -1,26 +1,13 @@
-=form_tag({}, :method=>:get) do
-  .search
-    %table
-      %tr
-        %td.crit
-          %label=tc("nb_years")
-          =text_field_tag(:nb_years, params[:nb_years]||2, :size=>5)
-        %td.submit{:rowspan=>3}
-          =hidden_field_tag(:export, :sales)
-          =submit_tag tg(:export), :name=>nil
-      %tr
-        %td.crit
-          %label=tc("data_to_export")
-          -for x in [:quantity, :pretax_amount, :amount]
-            =radio_button_tag "mode", x, (params[:mode].to_s == x.to_s)
-            %label{:for=>"mode_#{x}"}=SaleLine.human_attribute_name(x)
-      %tr
-        %td.crit
-          %label{:for=>"invoices"}=tc("invoices_only")
-          =check_box_tag "invoices", "1", (params[:invoices].to_s == "1"), "data-hide"=>"#non-invoices"
-      %tr
-        %td#non-invoices.crit
-          %label=tc("state")
-          -for x in Sale.state_machine.states # [:invoice, :order, :estimate]
-            =check_box_tag "states[#{x.name}]", "1", (params[:states][x.name].to_s == x.name.to_s), :id=>"states_#{x.name}"
-            %label{:for=>"states_#{x.name}"}=Sale.state_label(x.name)
+=kujaku({}, :popover => false) do |k|
+  -k.criterion do
+    %label=tc("nb_years")
+    =text_field_tag(:nb_years, params[:nb_years]||2, :size=>5)
+  -k.radio :quantity, :pretax_amount, :amount, :name => :mode, :i18n_root => "attributes."
+  -k.criterion do
+    %label{:for=>"invoices"}=tc("invoices_only")
+    =check_box_tag "invoices", "1", (params[:invoices].to_s == "1"), "data-hide"=>"#non-invoices"
+  -k.criterion(:id => "non-invoices") do
+    %label=tc("state")
+    -for x in Sale.state_machine.states # [:invoice, :order, :estimate]
+      =check_box_tag "states[#{x.name}]", "1", (params[:states][x.name].to_s == x.name.to_s), :id=>"states_#{x.name}"
+      %label{:for=>"states_#{x.name}"}=Sale.state_label(x.name)
