--- a/app/views/backend/purchase_items/_form.html.haml
+++ b/app/views/backend/purchase_items/_form.html.haml
@@ -1,10 +1,10 @@
 -# TODO Form
 =field_set do
   =f.referenced_association :purchase, :field => :hidden
-  =f.referenced_association :product, :source => :purchaseables # , :new=>true, "data-parameter-name"=>"product_id", "data-dependents"=>"#price-amount"
+  =f.referenced_association :product#, :source => :purchaseables # , :new=>true, "data-parameter-name"=>"product_id", "data-dependents"=>"#price-amount"
   =f.input :quantity
   =f.input :annotation
-  =f.nested_association :price do
+  =f.nested_association(:price) do
     =f.referenced_association :category
     =f.input :pretax_amount
     =f.referenced_association :tax
