--- a/app/views/backend/cells/elevage_rss_cells/show.html.haml
+++ b/app/views/backend/cells/elevage_rss_cells/show.html.haml
@@ -1,7 +1,7 @@
 .rss-feed
   .rss-title=@feed.title
   .rss-entries
-    -for entry in @feed.entries
+    -for entry in @feed.entries.sort{|a,b| b.published <=> a.published }
       =link_to(entry.url, :class => "rss-entry", :target => "_blank") do
         %h4.rss-entry-title
           =entry.title
