--- a/app/views/backend/animals/_form.html.haml
+++ b/app/views/backend/animals/_form.html.haml
@@ -1,5 +1,5 @@
 =field_set do # partie info general de l entité animal
-  =f.referenced_association :nature, :collection => ProductNature.animal
+  =f.referenced_association :nature, :source => :animals
   =f.input :name # affiche le champ name de l entité animal avec une infos derriere
   =f.input :sex, as: :radio_buttons# affiche le champ sexe sous forme de radio avec une collection de proposition (M ou F) de l entité animal
   =f.input :reproductor
